# dotfiles

./: .bash_login  .envrc  .gitconfig  .gitignore  .gitignore_global  .gitmodules  .ripgreprc  .skhdrc  .tmux.conf  .vimrc  .yabairc  .zprofile  .zshenv  .zshrc  Brewfile  CLAUDE.md  DESIGN_CLAUDE_CONFIG_STRUCTURE.md  DESIGN_CONNECTOR_MCP.md  Dockerfile  MD_COMPLETION.md  Makefile  README.md  Vagrantfile  brew.manifest  cargo-tools.sh  dotbox.sh  dotenv.yaml  fabfile.py  install.sh  manifest  osx.sh  requirements.txt  setup-paperwm.sh  starship.toml  update.sh
.agents/: zsh-precmd.zsh
.beads/: issues.jsonl  metadata.json
.claude/: .credentials.json  .gitignore  AESTHETIC.md  CATALOG.md  CLAUDE.md  QOL.md  commit-and-pr-style.md  mcp-needs-auth-cache.json  policy-limits.json  settings.json  statusline-command.sh
.config/: VAPORWAVE_PALETTE.md  starship.toml
.goose/: zsh-precmd.zsh
.hammerspoon/: init.lua
LaunchAgents/: com.rch.vaporwave-overlay.plist
mcp/: manifest.yaml
metal-overlay/: Makefile  README.md  VaporwaveOverlay.swift  VaporwaveShader.metal  build.sh  test.swift  vaporwave-overlay
reports/: REPORT_SKILL_COMPLIANCE_2026-02-11.md
scorecard/: Cargo.toml  README.md
scorecard/examples/: sample.md
scorecard/src/: main.rs
scripts/: install-mcp-servers.sh  migrate-skills.sh  pr-tally.sh  squire-metrics.sh  test-codex-limited.sh
ubersicht-widgets/: disk-grimoire.jsx  entropy-oracle.jsx  git-sigil.jsx  iching-reading.jsx  memento-mori.jsx  memory-vessel.jsx  pomodoro.jsx  (+4 more)
vaporwave-wgpu/: Cargo.toml
vaporwave-wgpu/src/: main.rs  shader.wgsl
(+287 files in other folders)
